# vehicle_controller

./: README.md  controller_record.csv  package.xml  setup.py
config/: controller.yaml  vehicle_params.yaml
data/: brake_mapData_noSlope.mat
data/reference_velocity/: referencePath_Velocity_peak_velocity_3.mat  referencePath_Velocity_peak_velocity_7.mat
install/: local_setup.sh  setup.sh
install/vehicle_controller/lib/vehicle_controller/: vehicle_controller_node
install/vehicle_controller/share/vehicle_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vehicle_controller/share/vehicle_controller/config/: controller.yaml  vehicle_params.yaml
install/vehicle_controller/share/vehicle_controller/data/: Acc_mapData_noSlope.mat  path_ref.mat
install/vehicle_controller/share/vehicle_controller/data/reference_velocity/: referencePath_Velocity_peak_velocity_4.mat  referencePath_Velocity_peak_velocity_5.mat
install/vehicle_controller/share/vehicle_controller/launch/: vehicle_controller.launch.py
launch/: vehicle_controller.launch.py
log/: latest_build
records/: vehicle_record_20260409_165154.csv
scripts/: analyze_progress_window.py  export_controller_record_csv.py  record_vehicle_bag.sh
vehicle_controller/: actuator_mapper.py  kinematic_lateral_mpc.py  lateral_mpc.py  longitudinal_lqr.py  longitudinal_pid.py  mpc_combined.py  nmpc_kbm_lateral.py  reference_manager.py  state_adapter.py  tracking_safety_supervisor.py  types.py  vehicle_controller_node.py
